--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -48,7 +48,7 @@
             </li>
           <% end %>
           <li class="nav-item">
-            <a class="nav-link">About</a>
+            <%= link_to t('nav.about'), '#', class: "dropdown-item" %>
           </li>
         </ul>        
       </div>
