--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
   <div class="row">
-    Bem vindo ao running log
+    <div class="home-banner">
+      <div class="overlay"></div>
+      <div class="content container">
+        <h1><%= t('home.title') %></h1>
+        <p><%= t('home.welcomeText_html') %></p>
+        <%= link_to t('home.signIn'), new_user_registration_path, class: 'sign-in' %>
+      </div>
+    </div>    
   </div>
 </div>
