--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,5 @@
-<h1>Footer</h1>
+<footer class="main-footer container-fluid p-5" style="background-color:#00ADB5">
+  <div class="container">
+    Footer
+  </div>
+</footer>
