--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<header>  
-  <nav class="navbar navbar-expand-lg">
+<header class="main-header">  
+  <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: var(--color-1);">
     <div class="container">
       <a class="navbar-brand" href="#">Running Log</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
             </li>
           <% end %>
           <li class="nav-item">
-            <%= link_to t('nav.about'), '#', class: "dropdown-item" %>
+            <%= link_to t('nav.about'), '#', class: "nav-link" %>
           </li>
         </ul>        
       </div>
@@ -56,5 +56,13 @@
   </nav>
 </header>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%- if notice || alert  %>
+  <div class="notifications">
+    <%- if notice  %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <%- if alert  %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+  </div>
+<% end %>
