--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Activity</h1>
-
-<%= render 'form', activity: @activity %>
+<div class="col-md-5 offset-md-3 mt-5 form-wrapper">
+  <div class="bg-white pb-1">
+    <header>
+      <h2><%= t('activity.newActivity') %></h2>
+    </header>
+    <%= render 'form', activity: @activity %>
+  </div>
+</div>
 
 <%= link_to 'Back', activities_path %>
