--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -59,10 +59,10 @@
 <%- if notice || alert  %>
   <div class="notifications">
     <%- if notice  %>
-      <p class="notice"><%= notice %></p>
+      <p class="notification-notice"><%= notice %></p>
     <% end %>
     <%- if alert  %>
-      <p class="alert"><%= alert %></p>
+      <p class="notification-alert"><%= alert %></p>
     <% end %>
   </div>
 <% end %>
