--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-5 offset-md-3 mt-5 form-wrapper">
+<div class="col-md-4 offset-md-4 mt-5 mb-5 form-wrapper mb-5">
   <div class="bg-white pb-1">
     <header>
       <h2><%= t('devise.signUp') %></h2>
@@ -7,12 +7,12 @@
       <div class="row">
         <%= render "users/shared/error_messages", resource: resource %>
 
-        <div class="mb-3">
+        <div class="mb-3 col-6">
           <%= f.label :first_name, class: "form-label" %>
           <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control" %>
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 col-6">
           <%= f.label :last_name, class: "form-label" %>          
           <%= f.text_field :last_name, autocomplete: "last_name", class: "form-control" %>
         </div>
@@ -22,7 +22,7 @@
           <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
         </div>
 
-        <div class="mb-3">
+        <div class="mb-4 col-6">
           <%= f.label :password, class: "form-label" %>          
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -30,7 +30,7 @@
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
         </div>
 
-        <div class="mb-4">
+        <div class="mb-4 col-6">
           <%= f.label :password_confirmation, class: "form-label" %>          
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
