--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,54 +1,11 @@
-<div class="container">
-  <div class="row">
-    <%- if(@activities) %>
+<div class="container">  
+  <%- if(@activities) %>
+    <ul class="row">
       <% @activities.each do |activity| %>
-        <li>          
+        <li class="activity-wrapper col-3">          
           <%= render activity %>
         </li>
-      <% end %>  
-    <% end %>
-  </div>
+      <% end %>
+    </ul>
+  <% end %>  
 </div>
-<h1>Activities</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Activity type</th>
-      <th>Start</th>
-      <th>Duration</th>
-      <th>Pace</th>
-      <th>Distance</th>
-      <th>Steps</th>
-      <th>Heart rate</th>
-      <th>Notes</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @activities.each do |activity| %>
-      <tr>
-        <td><%= activity.title %></td>
-        <td><%= activity.activity_type %></td>
-        <td><%= activity.start %></td>
-        <td><%= activity.duration %></td>
-        <td><%= activity.pace %></td>
-        <td><%= activity.distance %></td>
-        <td><%= activity.steps %></td>
-        <td><%= activity.heart_rate %></td>
-        <td><%= activity.notes %></td>
-        <td><%= activity.user_id %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Activity', new_activity_path %>
