--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -38,7 +38,7 @@
 
     <div class="mb-3 col-6">
       <%= f.label :pace, class: "form-label" %>
-      <%= f.number_field :pace, class: "form-control" %>
+      <%= f.text_field :pace, class: "form-control" %>
     </div>
 
     <div class="mb-3 col-6">
