--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,13 @@
-<footer class="main-footer container-fluid p-5" style="background-color:#00ADB5">
+<%# TODO ajustar o footer %>
+<footer class="main-footer container-fluid p-5" style="background-color:var(--color-3)">
   <div class="container">
-    Footer
+    <div class="col-md-4">
+        <div class="logo">
+          
+        </div>
+    </div>
   </div>
 </footer>
+
+<%# <a href="https://www.flaticon.com/free-icons/activity" title="activity icons">Activity icons created by Iconjam - Flaticon</a> %>
+<%# <a href="https://www.flaticon.com/free-icons/shoes" title="shoes icons">Shoes icons created by Ajmal Naha - Flaticon</a> %>
