--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -5,8 +5,8 @@
     </header>
     <%= render 'form', activity: @activity %>
     <div class="actions-shared">
-      <%= link_to 'Show', @activity %>
-      <%= link_to 'Back', activities_path %>
+      <%= link_to t('actions.back'), activities_path, class: 'back' %>
+      <%= link_to t('actions.show'), @activity, class: 'show' %>      
     </div>
   </div>
 </div>
