--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,8 +1,8 @@
-<div class="container">  
+<div class="container activity-container">  
   <%- if(@activities) %>
     <ul class="row">
       <% @activities.each do |activity| %>
-        <li class="activity-wrapper col-3">          
+        <li class="col-sm-12 col-md-3">
           <%= render activity %>
         </li>
       <% end %>
