--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -5,7 +5,7 @@
     </header>
     <%= render 'form', activity: @activity %>
     <div class="actions-shared">
-      <%= link_to 'Back', activities_path %>
+      <%= link_to 'Back', activities_path, class: 'back' %>
     </div>
   </div>
 </div>
