adição do jquery, modificação nos menus e configurações em geral

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,17 @@
     color: var(--color-3);
   }
 }
+.main-header {
+  .nav-link{
+    color: #fff;
+  }
+  .sign-up{
+    border: 2px solid #fff;
+    border-radius: 7px;
+    background-color: #fff;
+    color: var(--color-3);
+  }
+}
 /* main banner*/
 .home-banner{
   padding-left: 0px;
@@ -46,7 +57,7 @@
   z-index: 0;
   background-image: url('/assets/sporlab-XiZ7pRvCzro-unsplash.jpg');
   background-repeat: no-repeat;
-  min-height: 600px;
+  min-height: 100vh;
   background-size: cover;
   padding-top: 100px;
   .overlay{
@@ -112,8 +123,8 @@
     padding: 10px 15px;
     margin-bottom: 20px;
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.15);
-    box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.15);
+      -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.15);
+        box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.15);
   }
   form{
     padding-left: 15px;
