--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <%= link_to 'Home', root_path, class: "nav-link"  %>            
+            <%= link_to t('nav.home'), root_path, class: "nav-link"  %>            
           </li>
           <%- if user_signed_in? %>
             <li class="nav-item dropdown">
@@ -17,10 +17,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to t('nav.logs'), activities_path, class: "dropdown-item" %>
+                  <%= link_to t('nav.activities'), activities_path, class: "dropdown-item" %>
                 </li>
                 <li>
-                  <%= link_to t('nav.newLog'), new_activity_path , class: "dropdown-item" %>
+                  <%= link_to t('nav.newActivity'), new_activity_path , class: "dropdown-item" %>
                 </li>
               </ul>
             </li>
@@ -30,7 +30,7 @@
               <%= link_to t('nav.signIn'), new_user_session_path, class: "nav-link"  %>            
             </li>
             <li class="nav-item">              
-              <%= link_to t('nav.signUp'), new_user_registration_path, class: "nav-link"  %>            
+              <%= link_to t('nav.signUp'), new_user_registration_path, class: "nav-link sign-up"  %>            
             </li>
           <% else %>
             <li class="nav-item dropdown">
@@ -46,10 +46,7 @@
                 </li>
               </ul>
             </li>
-          <% end %>
-          <li class="nav-item">
-            <%= link_to t('nav.about'), '#', class: "nav-link" %>
-          </li>
+          <% end %>          
         </ul>        
       </div>
     </div>
